--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 *
 !*/
 
-# Do not ignore README file in the root of the repo
+# Do not ignore README and DevLog file in the root of the repo
 !README.md
+!_DevLog/**/*.md
 
 # Do not ignore git files in the root of the repo.
 !/.git*
